chore: Update WhatsApp button position to ensure visibility

--- a/assets/css/templatemo.css
+++ b/assets/css/templatemo.css
@@ -158,7 +158,7 @@ body, ul, li, p, a, label, input, div {
 }
 
 #boton-whatsapp {
-  position: fixed; /* Cambiado a fixed para asegurar su visibilidad */
+  position: relative; /* Cambiado a fixed para asegurar su visibilidad */
   z-index: 999; /* Valor alto, pero no extremadamente alto */
 }
 
